# cypher-investments

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/commands/: codereview.md
agents/research/: AGENTS.md
config/: default.yaml
data/results/: 86a8b555.json
docs/: simulator.md
notebooks/: ml_analysis.ipynb
scripts/: retrain.sh
src/advisor/: __init__.py
src/advisor/backtesting/: __init__.py  adaptive_exits.py  exit_optimizer.py  options_backtester.py
src/advisor/cli/: app.py  backtest_cmds.py  case_cmds.py  confluence_cmds.py  data_cmds.py  formatters.py  (+8 more)
src/research_agent/: __init__.py  __main__.py  agent.py  card.py  cli.py  config.py  evidence.py  llm.py  models.py  pipeline.py  queries.py  result.py  search.py  store.py
tests/: conftest.py  test_alpha_scorer.py  test_grounding.py  test_volume_confirmation.py
tests/test_backtesting/: test_adaptive_exits.py  test_enhanced_exits.py  test_exit_optimizer.py  test_options_backtester.py  test_slippage_skew.py
tests/test_confluence/: test_cli.py  test_e2e.py  test_fundamental.py  test_orchestrator.py  test_pead_screener.py  test_sentiment.py  test_smart_money_screener.py  test_technical.py
tests/test_core/: test_enums.py  test_models.py  test_pricing.py
tests/test_engine/: test_results.py  test_scanner.py  test_sizers.py  test_slippage.py  test_walk_forward.py
tests/test_market/: test_iv_analysis.py  test_premium_screener.py
tests/test_research_agent/: test_agent_loop.py  test_card.py  test_cli.py  test_config.py  test_evidence.py  test_llm.py  test_models.py  test_pipeline.py  test_queries.py  test_search.py  test_store.py  test_transcript_search.py
tests/test_scenario/: test_path_adapter.py  test_pipeline.py  test_signal_integrator.py  test_strategy_runner.py
tests/test_simulator/: test_calibration.py  test_candidates.py  test_charts_validation.py  test_db.py  test_engine.py  test_exit_sensitivity.py  test_importance_sampling.py  test_validation.py
tests/test_strategies/: test_base_scan.py  test_mean_reversion.py  test_momentum_breakout.py  test_pead.py  test_registry.py  test_risk_exits.py  test_sma_crossover.py
tests/test_strategy_case/: test_builder.py  test_models.py  test_scenarios.py  test_strategy_mapper.py  test_synthesis.py
(+106 files in other folders)
