[tool.poetry]
package-mode = true
packages = [{include = "advisor", from = "src"}]

[project]
name = "options"
version = "0.1.0"
description = "Options financial advisor - backtesting and strategy system"
authors = [
    {name = "oscarleonur-create", email = "oscar.leon.ur@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "typer[all]>=0.12,<1.0",
    "rich>=13.0",
    "yfinance>=0.2.36",
    "backtrader>=1.9.78",
    "py-vollib>=1.0.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "scipy>=1.12",
]

[project.scripts]
advisor = "advisor.cli.app:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
