[tool.poetry]
package-mode = true
packages = [
    {include = "advisor", from = "src"},
    {include = "research_agent", from = "src"},
]

[project]
name = "options"
version = "0.1.0"
description = "Options financial advisor - backtesting and strategy system"
authors = [
    {name = "oscarleonur-create", email = "oscar.leon.ur@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "typer[all]>=0.12,<1.0",
    "rich>=13.0",
    "yfinance>=0.2.36",
    "backtrader>=1.9.78",
    "py-vollib>=1.0.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "scipy>=1.12",
    "anthropic>=0.40",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.scripts]
advisor = "advisor.cli.app:app"
research_agent = "research_agent.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.5"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
